--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    display: flex;
+    align-items: center;
+    height: 100vh;
+}
 .container {
     max-width: fit-content;
     width: auto;
